Debugging table display issues on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -172,7 +172,7 @@ table a, table a:hover {
 	cursor: default;
 	text-decoration: none;
 	display: block;
-	padding: 9px 4px;
+	padding: 6px 0;
 }
 
 /** Employment + Education History **/
